mastodon/cfg/default/21-sidekiq.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mastodon-sidekiq
  labels:
    app: mastodon-sidekiq
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: mastodon-sidekiq
    spec:
      containers:
      - name: sidekiq
        image: gargron/mastodon:v2.6.0rc1
        command: ["/bin/ash", "-c", "bundle exec sidekiq -c 5 -q default -q mailers -q pull -q push"]
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "1Gi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "200m"
